<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textGrid3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:translationY="-35pt"
        android:textSize="34sp"
        />

    <TextView
        android:id="@+id/obligationBoddyMass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obligation"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:translationY="18dp"/>

    <TextView
        android:id="@+id/ingresoAlturaBoddyMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura2"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:translationX="-45dp"
        android:translationY="50dp"/>

    <EditText
        android:id="@+id/input"
        android:inputType="text"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:hint="@string/altura"
        android:translationX="54pt"
        android:translationY="10dp"/>

    <TextView
        android:id="@+id/ingresoKgBoddyMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg2"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:translationX="-64dp"
        android:translationY="40dp"/>

    <EditText
        android:id="@+id/input2"
        android:inputType="text"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:hint="@string/kg3"
        android:translationX="54pt"/>

    <TextView
        android:id="@+id/resultadoTvBoddyMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:translationY="23dp"
        android:translationX="-119dp"/>

    <TextView
        android:id="@+id/resultadoBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="3dp"
        android:translationX="7dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculation"
        android:textSize="17sp"
        android:translationY="29dp"
        style="@style/Buttons"/>



</LinearLayout>