<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textGridWomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:translationY="-45dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="34sp"
        />

    <TextView
        android:id="@+id/obligationWomen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obligation"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:translationY="50dp"/>

    <TextView
        android:id="@+id/selectionWomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectionFt"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:translationX="-83dp"
        android:translationY="85dp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/mySpinnerMen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="140dp"
        android:translationY="55dp"/>

    <TextView
        android:id="@+id/ingresoAlturaWomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alturaFt"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:translationX="-63dp"
        android:translationY="92dp"/>

    <EditText
        android:id="@+id/inputWomen"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/altura3"
        android:translationX="140dp"
        android:translationY="50dp"/>

    <TextView
        android:id="@+id/ingresoCircunferenciaWomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circunferenciaM"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:translationX="-35dp"
        android:translationY="83dp"/>

    <EditText
        android:id="@+id/input2Women"
        android:inputType="text"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/CM"
        android:translationX="140dp"
        android:translationY="40dp"/>

    <TextView
        android:id="@+id/complexionWomenR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:translationX="-91dp"
        android:translationY="62dp"/>

    <TextView
        android:id="@+id/complexionWomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:translationX="25dp"
        android:translationY="42dp"/>

    <TextView
        android:id="@+id/informationWomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:translationY="55dp"/>


    <Button
        android:id="@+id/btnWomen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculation"
        android:translationY="65dp"
        android:textSize="17sp"
        style="@style/Buttons"/>

</LinearLayout>