<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/fondo"
    android:gravity="center"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/MyRelativeLayout"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >
        <TextView
            android:id="@+id/textGridGender"
            android:text="@string/title"
            android:layout_centerInParent="true"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <TextView
        android:id="@+id/selectionGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:translationY="100dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/gener"/>

    <GridLayout
        android:id="@+id/MyGridLayout"
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp">

        <!--Row 1-->
        <!--Column 1-->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="90dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/GenderTvCardView1"
                    android:text="@string/men"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/men"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Column 2-->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="90dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/GenderTvCardView2"
                    android:text="@string/women"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/women"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>





    </GridLayout>





</LinearLayout>